--- a/styles.css
+++ b/styles.css
@@ -230,6 +230,7 @@ body{
           background-color: #1b5257;
       }
       .img {
+          width: 270px;
           margin-top: 0px;
       }
       .sidebar-contacts{
